Preparing Google Playstore app

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -115,6 +115,8 @@ donate.latest-donations=Latest Donations
 donate.largest-donations=Largest Donations
 donate.donate-now=Donate now
 
+donate-list.store.warning=Donation links are not available because of store rules. Please visit this page in your browser to donate.
+
 index.cookie.notice=This site uses cookies to store the session and user preferences to function properly. Your data is safe with us, as we don't store any personal information in the cookies nor do we send any information to a third party. By continuing to use this site you agree to the use of cookies.
 index.cookie.more=Click here to learn more
 #do not translate
