--- a/src/main/resources/i18n/messages_cz.properties
+++ b/src/main/resources/i18n/messages_cz.properties
@@ -115,6 +115,8 @@ donate.latest-donations=Nejnovější dary
 donate.largest-donations=Největší dary
 donate.donate-now=Darovat hned
 
+donate-list.store.warning=Darovat odkazy nejsou k dispozici z důvodu pravidel obchodu. Chcete-li přispět, navštivte tuto stránku ve svém prohlížeči.
+
 index.cookie.notice=Tento web používá soubory cookie k ukládání relací a uživatelských předvoleb, aby správně fungoval. Vaše data jsou u nás v bezpečí, protože v cookies neukládáme žádné osobní údaje ani neposíláme žádné informace třetí straně. Pokračováním v používání této stránky souhlasíte s používáním cookies.
 index.cookie.more=Další informace zobrazíte kliknutím sem
 # do not translate
