--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -108,6 +108,8 @@ donate.latest-donations=Donaciones recientes
 donate.largest-donations=Las mayores donaciones
 donate.donate-now=Dona ahora
 
+donate-list.store.warning=Los enlaces de donación no están disponibles debido a las normas de la tienda. Por favor, visite esta página en su navegador para donar.
+
 index.cookie.notice=Este sitio utiliza cookies para almacenar la sesión y la configuración del usuario para que el sitio pueda funcionar correctamente. Su información está segura con nosotros porque no almacenamos información personal en las cookies ni enviamos información a terceros. Al continuar usando este sitio, usted consiente en el uso de cookies.
 index.cookie.more=Haga clic aquí para saber más
 index.subtitle-2=100% gratis, sin publicidad 
