--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -108,6 +108,8 @@ donate.latest-donations=Dons récents
 donate.largest-donations=Les dons les plus importants
 donate.donate-now=Faire un don
 
+donate-list.store.warning=Les liens vers les dons ne sont pas disponibles en raison des règles du magasin. Veuillez visiter cette page dans votre navigateur pour faire un don.
+
 index.cookie.notice=Ce site utilise des cookies pour stocker les paramètres de session et d'utilisateur afin que le site puisse fonctionner correctement. Vos informations sont en sécurité chez nous car nous ne stockons pas d'informations personnelles dans les cookies et n'envoyons pas d'informations à des tiers. En continuant à utiliser ce site, vous consentez à l'utilisation de cookies.
 index.cookie.more=Cliquez ici pour en savoir plus
 index.subtitle-2=100% gratuit, pas de publicité 
