--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -108,6 +108,8 @@ donate.latest-donations=Donazioni recenti
 donate.largest-donations=Le più grandi donazioni
 donate.donate-now=Dona ora
 
+donate-list.store.warning=I link per le donazioni non sono disponibili a causa delle regole del negozio. Visita questa pagina nel tuo browser per donare.
+
 index.cookie.notice=Questo sito utilizza i cookie per memorizzare le impostazioni di sessione e dell'utente in modo che il sito possa funzionare correttamente. Le vostre informazioni sono al sicuro con noi perché non memorizziamo informazioni personali nei cookie o non inviamo informazioni a terzi. Continuando ad utilizzare questo sito, l'utente acconsente all'uso dei cookie.
 index.cookie.more=Clicca qui per saperne di più
 index.subtitle-2=100% gratuito, nessuna pubblicità 
