--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -108,6 +108,8 @@ donate.latest-donations=最近の寄付金
 donate.largest-donations=最大の寄付金
 donate.donate-now=今すぐ寄付する
 
+donate-list.store.warning=店舗の規定により、寄付のリンクはご利用いただけません。ブラウザでこのページをご覧になり、ご寄付ください。
+
 index.cookie.notice=当サイトでは、サイトを正常に機能させるために、セッションとユーザー設定を保存するためにクッキーを使用しています。クッキーに個人情報を保存したり、第三者に情報を送信したりすることはありませんので、お客様の情報は安全です。このサイトを継続して利用することで、クッキーの使用に同意したことになります。
 index.cookie.more=詳細はこちらをクリックしてください。
 index.subject-2=100%無料、広告なし 
