--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -108,6 +108,8 @@ donate.latest-donations=최근 기부
 donate.largest-donations=가장 큰 기부
 donate.donate-now=지금 기부하세요
 
+donate-list.store.warning=상점 규정으로 인해 기부 링크를 사용할 수 없습니다. 기부하려면 브라우저에서 이 페이지를 방문하세요.
+
 index.cookie.notice=이 사이트는 쿠키를 사용하여 세션 및 사용자 설정을 저장하므로 사이트가 제대로 작동합니다. 당사는 개인 정보를 쿠키에 저장하거나 제 3 자에게 정보를 전송하지 않기 때문에 귀하의 데이터는 안전합니다. 이 웹 사이트를 계속 사용하면 쿠키 사용에 동의하는 것입니다.
 index.cookie.more=자세한 내용을 보려면 여기를 클릭하십시오
 index.subtitle-2 = 100 % 무료, 광고 없음
