--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -108,6 +108,8 @@ donate.latest-donations=Doações recentes
 donate.largest-donations=Maiores doações
 donate.donate-now=Doar agora
 
+donate-list.store.warning=Os links para doações não estão disponíveis devido às regras da loja. Por favor, visite esta página no seu navegador para fazer uma doação.
+
 index.cookie.notice=Este site utiliza cookies para armazenar as configurações de sessão e de utilizador, para que o site possa funcionar correctamente. As suas informações estão seguras connosco porque não armazenamos informações pessoais nos cookies ou não enviamos informações a terceiros. Ao continuar a utilizar este site, consente a utilização de cookies.
 index.cookie.more=Clique aqui para saber mais
 index.subtitle-2=100% grátis, sem publicidade 
