--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -108,6 +108,8 @@ donate.latest-donations=Недавние пожертвования
 donate.largest-donations=Крупнейшие пожертвования
 donate.donate-now=Пожертвовать сейчас
 
+donate-list.store.warning=Ссылки на пожертвования недоступны из-за правил магазина. Пожалуйста, посетите эту страницу в вашем браузере, чтобы сделать пожертвование.
+
 index.cookie.notice=Этот сайт использует файлы cookie для хранения сеансов и пользовательских настроек, чтобы сайт мог функционировать должным образом. Ваша информация находится в безопасности с нами, потому что мы не храним личную информацию в файлах cookie и не отправляем ее третьим лицам. Продолжая пользоваться этим сайтом, вы соглашаетесь на использование cookie-файлов.
 index.cookie.more=Нажмите здесь, чтобы узнать больше
 index.subtitle-2=100% бесплатно, без рекламы 
