--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -108,6 +108,8 @@ donate.latest-donations=最近的捐款
 donate.largest-donations=最大捐款额
 donate.donate-now=捐献
 
+donate-list.store.warning=由于商店的规则，捐赠链接是不可用的。请在您的浏览器中访问此页面进行捐赠。
+
 index.cookie.notice=本网站使用Cookie来存储会话和用户设置，以便网站能够正常运行。您的信息在我们这里是安全的，因为我们不会在cookies中存储个人信息，也不会将信息发送给第三方。如果您继续使用本网站，即表示您同意使用cookies。
 index.cookie.more=点击这里了解更多
 index.subtitle-2=100%免费，无广告 
