--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -108,6 +108,8 @@ donate.latest-donations=Neueste Spenden
 donate.largest-donations=Größte Spenden
 donate.donate-now=Jetzt spenden
 
+donate-list.store.warning=Spenden-Links sind aufgrund der Store-Regeln nicht verfügbar. Bitte besuche diese Seite in Deinem Browser, um spenden zu können.
+
 index.cookie.notice=Diese Seite verwendet Cookies, um die Sitzungs- und Benutzereinstellungen zu speichern, damit die Seite ordnungsgemäß funktioniert. Deine Daten sind bei uns sicher, da wir weder persönliche Informationen in den Cookies speichern noch Informationen an Dritte senden. Durch die weitere Nutzung dieser Website stimmst du der Verwendung von Cookies zu.
 index.cookie.more=Klicke hier, um mehr zu erfahren
 index.subtitle-2=100% kostenlos, keine Werbung 
