Fix missing translation

--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -114,7 +114,7 @@ index.cookie.notice=Este site utiliza cookies para armazenar as configurações 
 index.cookie.more=Clique aqui para saber mais
 index.subtitle-2=100% grátis, sem publicidade 
 index.notice=Todas as fotos são de modelos e são apenas para fins ilustrativos
-index.key-features=Key features
+index.key-features=Características principais
 index.free.title=Livre para sempre
 index.free.description=Para esta plataforma não tem de pagar quaisquer taxas, pode utilizar todas as funções sem restrições. Estamos exclusivamente dependentes das suas generosas doações para manter esta plataforma em funcionamento.
 index.open-source.title=Código Aberto
