Add more options for admin page

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -256,6 +256,8 @@ admin-delete-contact=Delete contact
 admin.delete-report=Delete report
 admin.ban-user=Ban user
 admin.ban-user.confirm=You are about to remove a user permanently from the platform. Are you sure?
+admin.remove-description=Remove description
+admin.remove-images=Remove images
 admin.mail.send-single=Send email
 admin.mail.send-all=Send email to all
 admin.mail.send-all.confirm=You are about to send an email to all users. Are you sure?
