Add option to choose imperial units

--- a/src/main/resources/i18n/messages_cz.properties
+++ b/src/main/resources/i18n/messages_cz.properties
@@ -44,6 +44,7 @@ first-name=Křestní jméno
 
 gender=Pohlaví
 
+imperial=Imperiální
 imprint=Otisk
 interest=Zájem
 interests=Zájmy
@@ -82,6 +83,8 @@ submit=Odeslat
 subject=Pdředmět
 
 tos=Podmínky služby
+
+units=Jednotky
 
 website=Web
 
