--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -38,6 +38,7 @@ first-name=Vorname
 
 gender=Geschlecht
 
+imperial=Imperial
 imprint=Impressum
 interest=Interesse
 interests=Interessen
@@ -75,6 +76,8 @@ submit=Senden
 subject=Betreff
 
 tos=Nutzungsbedingungen
+
+units=Einheiten
 
 website=Webseite
 
