--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -38,6 +38,7 @@ first-name=Nombre de pila
 
 gender=Género
 
+imperial=Imperial
 imprint=Pie de imprenta
 interest=Interés
 interests=Intereses
@@ -75,6 +76,8 @@ submit=Envía
 subject=Asunto
 
 tos=Condiciones de uso
+
+units=Unidades
 
 website=Página web
 
