--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -38,6 +38,7 @@ first-name=Prénom
 
 gender=Genre
 
+imperial=Impérial
 imprint=Mentions légales
 interest=Intérêt
 interests=Intérêts
@@ -75,6 +76,8 @@ submit=Envoyer
 subject=Sujet
 
 tos=Conditions d'utilisation
+
+units=Unités
 
 website=Site web
 
