--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -38,6 +38,7 @@ first-name=Nome
 
 gender=Sesso
 
+imperial=Imperiale
 imprint=Impronta
 interest=Interesse
 interests=Interessi
@@ -75,6 +76,8 @@ submit=Invia
 subject=Oggetto
 
 tos=Condizioni di utilizzo
+
+units=Unità
 
 website=Sito web
 
