--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -38,6 +38,7 @@ first-name=ファーストネーム
 
 gender=性別
 
+imperial=インペリアル
 imprint=刷り込み
 interest=興味
 interests=関心事
@@ -75,6 +76,8 @@ submit=送信
 subject=対象者
 
 tos=ご利用条件
+
+units=単位
 
 website=ウェブサイト
 
