--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -38,6 +38,7 @@ first-name=이름
 
 gender=성별
 
+imperial=장엄한 
 imprint=날인
 interest=관심
 interests=이해
@@ -75,6 +76,8 @@ submit=보내다
 subject=제목
 
 tos=이용 약관
+
+units=단위
 
 website=웹 사이트
 
