--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -38,6 +38,7 @@ first-name=Primeiro nome
 
 gender=Género
 
+imperial=Imperial
 imprint=Impressão
 interest=Interesse
 interests=Interesses
@@ -75,6 +76,8 @@ submit=Enviar
 subject=Assunto
 
 tos=Termos de utilização
+
+units=Unidades
 
 website=Sítio Web
 
