--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -38,6 +38,7 @@ first-name=Имя
 
 gender=Пол
 
+imperial=Империал
 imprint=Вывод
 interest=Интересный сайт
 interests=Интересы
@@ -75,6 +76,8 @@ submit=Отправить
 subject=Тема
 
 tos=Условия использования
+
+units=Единицы
 
 website=Веб-сайт
 
