--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -38,6 +38,7 @@ first-name=名
 
 gender=性别问题
 
+imperial=帝国
 imprint=版本说明
 interest=兴趣
 interests=兴趣爱好
@@ -75,6 +76,8 @@ submit=发送
 subject=课题
 
 tos=使用条款
+
+units=单位
 
 website=网站建设
 
