--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -44,6 +44,7 @@ first-name=First name
 
 gender=Gender
 
+imperial=Imperial
 imprint=Imprint
 interest=Interest
 interests=Interests
@@ -59,7 +60,9 @@ light=Light
 login=Login
 logout=Logout
 
+meme=Meme
 message=Message
+mi=mi
 
 new-password=New password
 no-users-found=No users found
@@ -75,6 +78,7 @@ reports=Reports
 
 save=Save
 search=Search
+si=SI
 sign-up=Sign up
 source-code=Source code
 sort=Sort
@@ -82,6 +86,8 @@ submit=Submit
 subject=Subject
 
 tos=Terms of Service
+
+units=Units
 
 website=Website
 
