Wrap links in email in anchor tags

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -294,13 +294,13 @@ backend.webpush.message.message=Click here to find out more
 # MAIL #
 
 backend.mail.register.subject=Your registration at {0}
-backend.mail.register.body=Hello {0}, <br> Thank you for your registration at {1}. Please confirm your registration: {2}/register/confirm/{3}
+backend.mail.register.body=Hello {0}, <br> Thank you for your registration at {1}. Please confirm your registration: <a href="{2}/register/confirm/{3}">{2}/register/confirm/{3}</a>
 
 backend.mail.password-reset.subject=Resetting your password
-backend.mail.password-reset.body=Hello {0}, <br> You have requested a password reset at {1}. Please visit the following link if you wish to reset your password: {2}/password/change/{3}
+backend.mail.password-reset.body=Hello {0}, <br> You have requested a password reset at {1}. Please visit the following link if you wish to reset your password: <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.account-delete-request.subject=Deleting your account
-backend.mail.account-delete-request.body=Hello {0}, <br> You have requested to have your account deleted at {1}. Please visit the following link if you wish to delete your account permanently: {2}/delete-account/{3}. The link will be available in 24 hours and valid for 24 hours.
+backend.mail.account-delete-request.body=Hello {0}, <br> You have requested to have your account deleted at {1}. Please visit the following link if you wish to delete your account permanently: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. The link will be available in 24 hours and valid for 24 hours.
 
 backend.mail.account-delete-confirm.subject=Account deletion
 backend.mail.account-delete-confirm.body=Hello {0}, <br> We have deleted your account at {1}. You can always create a new account if you change your mind. We hope to hear from you again :)
