--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -280,13 +280,13 @@ backend.webpush.message.message=Klicke hier, um mehr zu erfahren
 # MAIL #
 
 backend.mail.register.subject=Deine Registrierung bei {0}
-backend.mail.register.body=Hallo {0}, <br> Danke für die Registrierung bei {1}. Bitte bestätige deine Registrierung: {2}/register/confirm/{3}
+backend.mail.register.body=Hallo {0}, <br> Danke für die Registrierung bei {1}. Bitte bestätige deine Registrierung: <a href="{2}/register/confirm/{3}">{2}/register/confirm/{3}</a>
 
 backend.mail.password-reset.subject=Zurücksetzen deines Passworts
-backend.mail.password-reset.body=Hallo {0}, <br> Du hast eine Rücksetzung deines Passworts bei {1} beantragt. Besuche den folgenden Link, wenn du dein Passwort zurücksetzen möchtest: {2}/password/change/{3}
+backend.mail.password-reset.body=Hallo {0}, <br> Du hast eine Rücksetzung deines Passworts bei {1} beantragt. Besuche den folgenden Link, wenn du dein Passwort zurücksetzen möchtest: <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.account-delete-request.subject=Deleting your account
-backend.mail.account-delete-request.body=Hallo {0}, <br> Du hast die Löschung Deines Kontos bei {1} beantragt. Bitte besuche den folgenden Link, wenn du dein Konto dauerhaft löschen lassen möchtest: {2}/delete-account/{3}. Der Link wird in 24 Stunden verfügbar und 24 Stunden lang gültig sein.
+backend.mail.account-delete-request.body=Hallo {0}, <br> Du hast die Löschung Deines Kontos bei {1} beantragt. Bitte besuche den folgenden Link, wenn du dein Konto dauerhaft löschen lassen möchtest: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. Der Link wird in 24 Stunden verfügbar und 24 Stunden lang gültig sein.
 
 backend.mail.account-delete-confirm.subject=Kontolöschung
 backend.mail.account-delete-confirm.body=Hallo {0}, <br> Wir haben dein Konto bei {1} gelöscht. Du kannst jederzeit ein neues Konto erstellen, falls du deine Meinung änderst. Wir hoffen wieder von dir zu hören :)
