--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -278,13 +278,13 @@ backend.webpush.message.message=Clique aqui para saber mais
 # MAIL #
 
 backend.mail.register.subject=A sua inscrição em {0}
-backend.mail.register.body=Olá {0}, <br> Obrigado por se registar com {1}. Por favor confirme o seu registo: {2}/register/confirm/{3}.
+backend.mail.register.body=Olá {0}, <br> Obrigado por se registar com {1}. Por favor confirme o seu registo: <a href="{2}/register/confirm/{3}">{2}/register/confirm/{3}</a>
 
 backend.mail.password-reset.subject=Repor a sua palavra-passe
-backend.mail.password-reset.body=Olá {0}, <br> Pediu a redefinição da sua palavra-passe em {1}. Visite o seguinte link se quiser redefinir a sua palavra-passe: {2}/password/change/{3}
+backend.mail.password-reset.body=Olá {0}, <br> Pediu a redefinição da sua palavra-passe em {1}. Visite o seguinte link se quiser redefinir a sua palavra-passe: <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.account-delete-request.subject=Apagar a sua conta
-backend.mail.account-delete-request.body=Olá {0}, <br> Pediu que a sua conta fosse apagada em {1}. Por favor, visite o seguinte link se desejar apagar a sua conta permanentemente: {2}/delete-account/{3}. A ligação estará disponível em 24 horas e será válida por 24 horas.
+backend.mail.account-delete-request.body=Olá {0}, <br> Pediu que a sua conta fosse apagada em {1}. Por favor, visite o seguinte link se desejar apagar a sua conta permanentemente: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. A ligação estará disponível em 24 horas e será válida por 24 horas.
 
 backend.mail.account-delete-confirm.subject=Eliminação de conta
 backend.mail.account-delete-confirm.body=Olá {0}, <br> Apagámos a sua conta em {1}. Pode sempre criar uma nova conta se mudar de ideias. Esperamos ouvir de si novamente :)
