--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -278,13 +278,13 @@ backend.webpush.message.message=Нажмите здесь, чтобы узнат
 # MAIL #
 
 backend.mail.register.subject=Ваша регистрация по адресу {0}
-backend.mail.register.body=Здравствуйте {0}, <br> Спасибо, что зарегистрировались в {1}. Пожалуйста, подтвердите вашу регистрацию: {2}/register/confirm/{3}
+backend.mail.register.body=Здравствуйте {0}, <br> Спасибо, что зарегистрировались в {1}. Пожалуйста, подтвердите вашу регистрацию: <a href="{2}/register/confirm/{3}">{2}/register/confirm/{3}</a>
 
 backend.mail.password-reset.subject=Сброс вашего пароля
-backend.mail.password-reset.body=Здравствуйте {0}, <br> Вы запросили сброс своего пароля на {1}. Перейдите по следующей ссылке, если вы хотите сбросить свой пароль: {2}/password/change/{3}.
+backend.mail.password-reset.body=Здравствуйте {0}, <br> Вы запросили сброс своего пароля на {1}. Перейдите по следующей ссылке, если вы хотите сбросить свой пароль: <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.account-delete-request.subject=Удаление аккаунта
-backend.mail.account-delete-request.body=Здравствуйте {0}, <br> Вы запросили удаление вашего аккаунта по адресу {1}. Пожалуйста, перейдите по следующей ссылке, если вы хотите навсегда удалить свой аккаунт: {2}/delete-account/{3}. Ссылка будет доступна в течение 24 часов и действительна в течение 24 часов.
+backend.mail.account-delete-request.body=Здравствуйте {0}, <br> Вы запросили удаление вашего аккаунта по адресу {1}. Пожалуйста, перейдите по следующей ссылке, если вы хотите навсегда удалить свой аккаунт: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. Ссылка будет доступна в течение 24 часов и действительна в течение 24 часов.
 
 backend.mail.account-delete-confirm.subject=удаление аккаунта
 backend.mail.account-delete-confirm.body=Здравствуйте {0}, <br> Мы удалили ваш аккаунт по адресу {1}. Вы всегда можете создать новый аккаунт, если передумаете. Надеемся услышать от вас еще раз :)
