--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -278,16 +278,16 @@ backend.webpush.message.message=点击这里了解更多
 # MAIL #
 
 backend.mail.register.subject=您在{0}注册
-backend.mail.register.body=您好{0}，<br>感谢您在{1}注册。请确认您的注册：{2}/register/confirm/{3}。
+backend.mail.register.body=您好{0}，<br>感谢您在{1}注册。请确认您的注册：<a href="{2}/register/confirm/{3}">{2}/register/confirm/{3}</a>
 
 backend.mail.password-reset.subject=重新设置密码
-backend.mail.password-reset.body=您好{0}，<br>您已在{1}申请重置密码。如果您想重新设置密码，请访问以下链接：{2}/password/change/{3}。
+backend.mail.password-reset.body=您好{0}，<br>您已在{1}申请重置密码。如果您想重新设置密码，请访问以下链接： <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.userdata.subject=您对用户数据的要求
 backend.mail.userdata.body=您好{0}，<br>您在{1}申请了一份您的资料。
 
 backend.mail.account-delete-request.subject=刪除您的帳戶
-backend.mail.account-delete-request.body=您好{0}，<br>您要求删除您在{1}的账户。如果您想永久删除您的账户，请访问以下链接：{2}/delete-account/{3}。该链接将在24小时内开通，有效期为24小时。
+backend.mail.account-delete-request.body=您好{0}，<br>您要求删除您在{1}的账户。如果您想永久删除您的账户，请访问以下链接：<a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>。该链接将在24小时内开通，有效期为24小时。
 
 backend.mail.account-delete-confirm.subject=账户删除
 backend.mail.account-delete-confirm.body=您好{0}，<br>我们已经删除了您在{1}的账户。如果您改变主意，您可以随时创建一个新的账户。我们希望再次收到您的来信：)
