--- a/src/main/resources/i18n/messages_cz.properties
+++ b/src/main/resources/i18n/messages_cz.properties
@@ -289,13 +289,13 @@ backend.webpush.message.message=Kliknutím sem získáte další informace
 # MAIL #
 
 backend.mail.register.subject=Vaše registrace na {0}
-backend.mail.register.body=Dobrý den {0}, <br> děkujeme za registraci na adrese {1}. Potvrďte prosím svou registraci: {2}/register/confirm/{3}
+backend.mail.register.body=Dobrý den {0}, <br> děkujeme za registraci na adrese {1}. Potvrďte prosím svou registraci: <a href="{2}/register/confirm/{3}">{2}/register/confirm/{3}</a>
 
 backend.mail.password-reset.subject=Obnovení hesla
-backend.mail.password-reset.body=Dobrý den, {0}, <br> o obnovení hesla jste požádali na adrese {1}. Chcete-li obnovit své heslo, navštivte následující odkaz: {2}/password/change/{3}
+backend.mail.password-reset.body=Dobrý den, {0}, <br> o obnovení hesla jste požádali na adrese {1}. Chcete-li obnovit své heslo, navštivte následující odkaz: <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.account-delete-request.subject=Mazání vašeho účtu
-backend.mail.account-delete-request.body=Dobrý den, {0}, <br> požádali jste o smazání svého účtu na {1}. Chcete-li svůj účet trvale smazat, navštivte následující odkaz: {2}/delete-account/{3}. Odkaz bude k dispozici do 24 hodin a bude platný 24 hodin.
+backend.mail.account-delete-request.body=Dobrý den, {0}, <br> požádali jste o smazání svého účtu na {1}. Chcete-li svůj účet trvale smazat, navštivte následující odkaz: <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. Odkaz bude k dispozici do 24 hodin a bude platný 24 hodin.
 
 backend.mail.account-delete-confirm.subject=Smazání účtu
 backend.mail.account-delete-confirm.body=Dobrý den, {0}, <br> odstranili jsme váš účet na adrese {1}. Pokud si to rozmyslíte, můžete si vždy vytvořit nový účet. Doufáme, že se vám ozveme znovu :)
