--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -278,13 +278,13 @@ backend.webpush.message.message=Cliquez ici pour en savoir plus
 # MAIL #
 
 backend.mail.register.subject=Votre inscription à {0}
-backend.mail.register.body=Bonjour {0}, <br> Merci de vous inscrire auprès de {1}. Veuillez confirmer votre inscription : {2}/register/confirm/{3}
+backend.mail.register.body=Bonjour {0}, <br> Merci de vous inscrire auprès de {1}. Veuillez confirmer votre inscription : <a href="{2}/register/confirm/{3}">{2}/register/confirm/{3}</a>
 
 backend.mail.password-reset.subject=Réinitialisation de votre mot de passe
-backend.mail.password-reset.body=Bonjour {0}, <br> Vous avez demandé une réinitialisation de votre mot de passe à {1}. Visitez le lien suivant si vous souhaitez réinitialiser votre mot de passe : {2}/password/change/{3}
+backend.mail.password-reset.body=Bonjour {0}, <br> Vous avez demandé une réinitialisation de votre mot de passe à {1}. Visitez le lien suivant si vous souhaitez réinitialiser votre mot de passe : <a href="{2}/password/change/{3}">{2}/password/change/{3}</a>
 
 backend.mail.account-delete-request.subject=Suppression de votre compte
-backend.mail.account-delete-request.body=Bonjour {0}, <br> Vous avez demandé la suppression de votre compte à {1}. Veuillez consulter le lien suivant si vous souhaitez supprimer votre compte de manière permanente : {2}/delete-account/{3}. Le lien sera disponible dans 24 heures et valable pendant 24 heures.
+backend.mail.account-delete-request.body=Bonjour {0}, <br> Vous avez demandé la suppression de votre compte à {1}. Veuillez consulter le lien suivant si vous souhaitez supprimer votre compte de manière permanente : <a href="{2}/delete-account/{3}">{2}/delete-account/{3}</a>. Le lien sera disponible dans 24 heures et valable pendant 24 heures.
 
 backend.mail.account-delete-confirm.subject=Suppression de compte
 backend.mail.account-delete-confirm.body=Bonjour {0}, <br> Nous avons supprimé votre compte à {1}. Vous pouvez toujours créer un nouveau compte si vous changez d'avis. Nous espérons avoir de vos nouvelles :)
