Adjust privacy policy notification in login

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -158,7 +158,7 @@ login.oauth.facebook=Sign in with Facebook
 login.email.sign-in=Sign in with email
 login.register=Don't have an account?
 login.remember=Remember me
-login.privacy-policy=Privacy policy was updated on the 
+login.privacy-policy=Privacy policy was updated on the {0}
 login.js.error=Login failed, please check your credentials, complete the captcha and try again. A new confirmation email has been sent to you if your account hasn't been verified yet.
 
 message.title=Messages
