--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -146,7 +146,7 @@ login.oauth.facebook=Anmelden mit Facebook
 login.email.sign-in=Anmelden mit E-Mail
 login.register=Noch kein Konto?
 login.remember=Angemeldet bleiben
-login.privacy-policy=Datenschutzerklärung wurde zuletzt aktualisiert am 
+login.privacy-policy=Die Datenschutzerklärung wurde zuletzt am {0} aktualisiert
 login.js.error=Anmeldung fehlgeschlagen, bitte überprüfe die Anmeldedaten, fülle das Captcha aus und versuche es erneut. Eine neue Bestätigungs-E-Mail wurde versendet, falls dein Konto noch nicht verifiziert wurde.
 
 message.title=Nachrichten
