Fix German translation

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -27,7 +27,7 @@ default=Standard
 description=Beschreibung
 dob=Geburtsdatum
 donate=Spenden
-donate=Gespended
+donated=Gespendet
 donations=Spenden
 
 email=E-mail
