Show disliked users in profile

--- a/src/main/resources/i18n/messages_cz.properties
+++ b/src/main/resources/i18n/messages_cz.properties
@@ -98,6 +98,9 @@ profile.blocked-users=Zobrazit blokované uživatele
 liked-users.title=Líbí se mi uživatelé
 profile.liked-users=Zobrazit oblíbené uživatele
 
+disliked-users.title=Uživatelé nemají rádi
+profile.disliked-users=Zobrazit neoblíbené uživatele
+
 profile.warning.incomplete=Uživatelský profil je neúplný, ostatní uživatelé vás neuvidí.
 profile.warning.no-profile-picture=Nebyl nalezen žádný profilový obrázek!
 profile.warning.no-description=Nebyl nalezen žádný popis!
