--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -91,6 +91,9 @@ profile.blocked-users=Blockierte Nutzer anzeigen
 liked-users.title=Gemochte Nutzer
 profile.liked-users=Gemochte Nutzer anzeigen
 
+disliked-users.title=Nicht gemochte Nutzer
+profile.disliked-users=Nicht gemochte Nutzer anzeigen
+
 profile.warning.incomplete=Dein Nutzerprofil ist unvollständig, und kann von anderen Nutzern nicht gesehen werden.
 profile.warning.no-profile-picture=Kein Profilbild gefunden!
 profile.warning.no-description=Keine Beschreibung gefunden!
