--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -91,6 +91,9 @@ profile.blocked-users=Mostrar usuarios bloqueados
 liked-users.title=Usuarios a los que les gusta
 profile.liked-users=Mostrar los usuarios que le gustan
 
+disliked-users.title=Usuarios que no les gusta
+profile.disliked-users=Mostrar usuarios no deseados
+
 profile.warning.incomplete=Su perfil de usuario está incompleto y no puede ser visto por otros usuarios.
 profile.warning.no-profile-picture=¡No se encontró ninguna foto de perfil!
 profile.warning.no-description=¡No se encontró ninguna descripción!
