--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -91,6 +91,9 @@ profile.blocked-users=Afficher les utilisateurs bloqués
 liked-users.title=Utilisateurs appréciés
 profile.liked-users=Montrer les utilisateurs aimés
 
+disliked-users.title=Utilisateurs non appréciés
+profile.disliked-users=Afficher les utilisateurs désapprouvés
+
 profile.warning.incomplete=Votre profil d'utilisateur est incomplet et ne peut pas être vu par les autres utilisateurs.
 profile.warning.no-profile-picture=Aucune photo de profil trouvée!
 profile.warning.no-description=Aucune description trouvée!
