--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -91,6 +91,9 @@ profile.blocked-users=Mostra gli utenti bloccati
 liked-users.title=Utenti apprezzati
 profile.liked-users=Mostra utenti graditi
 
+disliked-users.title=Utenti non graditi
+profile.disliked-users=Mostra gli utenti non graditi
+
 profile.warning.incomplete=Il vostro profilo utente è incompleto e non può essere visto da altri utenti.
 profile.warning.no-profile-picture=Nessuna foto del profilo trovata!
 profile.warning.no-description=Nessuna descrizione trovata!
