--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -91,6 +91,9 @@ profile.blocked-users=ブロックされたユーザーを表示
 liked-users.title=気に入ったユーザー
 profile.liked-users=いいね！」を押したユーザーを表示
 
+disliked-users.title=気に入らないユーザー
+profile.disliked-users=嫌いなユーザーを表示する
+
 profile.warning.incomplete=あなたのユーザープロフィールは不完全であり、他のユーザーからは見ることができません。
 profile.warning.no-profile-picture=プロフィール写真が見つかりませんでした
 profile.warning.no-description=記述は見つかりませんでした!
