--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -91,6 +91,9 @@ profile.blocked-users=显示被屏蔽的用户
 liked-users.title=喜欢的用户
 profile.like-users=显示喜欢的用户
 
+disliked-users.title=不喜欢的用户
+profile.disliked-users=显示不喜欢的用户
+
 profile.warning.incomplete=您的用户资料不完整，无法被其他用户看到。
 profile.warning.no-profile-picture=您的用户资料不完整，无法被其他用户看到。
 profile.warning.no-description=没有找到描述!
