--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -101,6 +101,9 @@ profile.blocked-users=Show blocked users
 liked-users.title=Liked users
 profile.liked-users=Show liked users
 
+disliked-users.title=Disliked users
+profile.disliked-users=Show disliked users
+
 profile.warning.incomplete=User profile is incomplete, you won't be seen by other users.
 profile.warning.no-profile-picture=No profile picture found!
 profile.warning.no-description=No description found!
