--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -91,6 +91,9 @@ profile.blocked-users=차단 된 사용자 표시
 liked-users.title = 좋아요 사용자
 profile.liked-users = 좋아하는 사용자 표시
 
+disliked-users.title=싫어하는 사용자
+profile.disliked-users=싫어요 사용자 표시
+
 profile.warning.incomplete=사용자 프로필이 불완전하며 다른 사용자가 볼 수 없습니다.
 profile.warning.no-profile-picture=프로필 사진이 없습니다!
 profile.warning.no-description=설명이 없습니다!
