--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -91,6 +91,9 @@ profile.blocked-users=Mostrar utilizadores bloqueados
 liked-users.title=Utilizadores preferidos
 profile.liked-users=Mostrar utilizadores apreciados
 
+disliked-users.title=Utilizadores que não gostaram
+profile.disliked-users=Mostrar utilizadores não apreciados
+
 profile.warning.incomplete=O seu perfil de utilizador está incompleto e não pode ser visto por outros utilizadores.
 profile.warning.no-profile-picture=Nenhuma foto de perfil encontrada!
 profile.warning.no-description=Nenhuma descrição encontrada!
