--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -91,6 +91,9 @@ profile.blocked-users=Показать заблокированных польз
 liked-users.title=Понравившиеся пользователи
 profile.liked-users=Показать понравившихся пользователей
 
+disliked-users.title=Пользователям не нравится
+profile.disliked-users=Показать пользователей, которым не нравится
+
 profile.warning.incomplete=Ваш пользовательский профиль неполный и не может быть замечен другими пользователями.
 profile.warning.no-profile-picture=Фотография профиля не найдена!
 profile.warning.no-description=Описание не найдено!
