Basic referral implementation

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -217,6 +217,7 @@ register.asterisk-warning=Fields with an asterisk (*) cannot be changed in the f
 register.login=Already have an account?
 register.oauth.google=Sign up with Google
 register.oauth.facebook=Sign up with Facebook
+register.referrer-email=Referrer email
 
 search.title=Search
 search.max-distance=Maximum distance
