More stuff for referrals

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -9,6 +9,7 @@ app.name=Alovoa
 
 error.generic=An error occured. Please try again.
 success.submit.generic=Your request has been successfully submitted.
+success.clipboard=Copied to clipboard!
 error.max-chars.generic=You have reached the maximum number of characters.
 error.password-weak=Your password needs to be at least 7 characters long and must contain characters and numbers.
 error.media.max-size-exceeded=File is too large! Maximum size is 2MB.
@@ -201,6 +202,8 @@ profile.delete-account.success=Success! Please check your mailbox and read the i
 profile.ui-design=UI design
 profile.ui-design.rounded=Rounded
 profile.ui-design.angular=Angular
+profile.referrer.info=Recommend Alovoa to a friend! Both of you will a get small but permanent visibility boost if a new account is created with this link:
+profile.referrer.amount=Number of referrals left:
 
 profile.js.delete-image.confirm=Delete selected image?
 
