Use anonymous code instead of using email to improve privacy

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -220,7 +220,7 @@ register.asterisk-warning=Fields with an asterisk (*) cannot be changed in the f
 register.login=Already have an account?
 register.oauth.google=Sign up with Google
 register.oauth.facebook=Sign up with Facebook
-register.referrer-email=Referrer email
+register.referral-code=Referral code
 
 search.title=Search
 search.max-distance=Maximum distance
