Translation for referrals

--- a/src/main/resources/i18n/messages_cz.properties
+++ b/src/main/resources/i18n/messages_cz.properties
@@ -9,6 +9,7 @@ app.name=Alovoa
 
 error.generic=Došlo k chybě. Prosím zkuste to znovu.
 success.submit.generic=Váš požadavek byl úspěšně odeslán.
+success.clipboard=Zkopírováno do schránky!
 error.max-chars.generic=Dosáhli jste maximálního počtu znaků.
 error.password-strong=Vaše heslo musí mít alespoň 7 znaků a musí obsahovat znaky a čísla.
 error.media.max-size-beyond=Soubor je příliš velký! Maximální velikost je 2 MB.
@@ -197,6 +198,8 @@ profile.delete-account.success=Úspěch! Zkontrolujte prosím svou poštovní sc
 profile.ui-design=Design uživatelského rozhraní
 profile.ui-design.rounded=Zaoblené
 profile.ui-design.angular=Hranaté
+profile.referrer.info=Doporučte Alovoa svým přátelům! Oba získáte malé, ale trvalé zvýšení viditelnosti, pokud bude vytvořen nový účet s tímto odkazem:
+profile.referrer.amount=Počet zbývajících doporučení:
 
 profile.js.delete-image.confirm=Smazat vybraný obrázek?
 
@@ -213,6 +216,7 @@ register.asterisk-warning=Pole s hvězdičkou (*) nelze v budoucnu změnit
 register.login=Již máte účet?
 register.oauth.google=Zaregistrujte se pomocí Google
 register.oauth.facebook=Zaregistrujte se pomocí Facebooku
+register.referral-code=Odkazovací kód
 
 search.title=Hledat
 search.max-distance=Maximální vzdálenost
