--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -6,6 +6,7 @@
 
 error.generic=Ein Fehler ist aufgetreten. Bitte versuche es erneut.
 success.submit.generic=Die Anfrage wurde erfolgreich übermittelt.
+success.clipboard=In die Zwischenablage kopiert!
 error.max-chars.generic=Maximale Anzahl von Zeichen erreicht.
 error.password-weak=Passwort muss mindestens 7 Zeichen lang sein und Zeichen und Zahlen enthalten.
 error.password-no-match=Die Passwörter stimmen nicht überein.
@@ -189,6 +190,8 @@ profile.delete-account.success=Erfolg! Bitte prüfe Deine Mailbox und ließ Dir 
 profile.ui-design=UI Design
 profile.ui-design.rounded=Abgerundet
 profile.ui-design.angular=Eckig
+profile.referrer.info=Alovoa einem Freund weiterempfehlen! Ihr beide erhaltet einen kleinen, aber permanenten Boost auf eure Sichtbarkeit, wenn ein neues Konto mit diesem Link erstellt wird:
+profile.referrer.amount=Anzahl der verbleibenden Empfehlungen:
 
 profile.js.delete-image.confirm=Ausgewähltes Bild löschen?
 
@@ -205,6 +208,7 @@ register.asterisk-warning=Felder mit einem Sternchen (*) können in Zukunft nich
 register.login=Du hast bereits ein Konto?
 register.oauth.google=Registrieren mit Google
 register.oauth.facebook=Registrieren mit Facebook
+register.referral-code=Empfehlungscode
 
 search.title=Suchen
 search.max-distance=Maximale Entfernung
