--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -6,6 +6,7 @@
 
 error.generic=Se ha producido un error. Por favor, inténtelo de nuevo.
 success.submit.generic=La solicitud fue presentada con éxito.
+success.clipboard=¡Copiado en el portapapeles!
 error.max-chars.generic=Número máximo de caracteres alcanzados.
 error.password-weak=La contraseña debe tener al menos 7 caracteres y contener caracteres y números.
 error.password-no-match=Las contraseñas no coinciden.
@@ -187,6 +188,8 @@ profile.delete-account.success=¡Éxito! Por favor, compruebe su buzón y lea at
 profile.ui-design=Diseño de la interfaz de usuario
 profile.ui-design.rounded=Redondeado
 profile.ui-design.angular=Angular
+profile.referrer.info=¡Recomienda Alovoa a un amigo! Ambos obtendrán un pequeño pero permanente impulso de visibilidad si se crea una nueva cuenta con este enlace:
+profile.referrer.amount=Número de remisiones que quedan:
 
 profile.js.delete-image.confirm=¿Borrar la imagen seleccionada?
 
@@ -203,6 +206,7 @@ register.asterisk-warning=Los campos marcados con un asterisco (*) no pueden ser
 register.login=¿Ya tiene una cuenta?
 register.oauth.google=Registrarse en Google
 register.oauth.facebook=Registrarse en Facebook
+register.referral-code=Código de referencia
 
 search.title=Busca en
 search.max-distance=La distancia máxima
