--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -6,6 +6,7 @@
 
 error.generic=Si è verificato un errore. La preghiamo di riprovare.
 success.submit.generic=La richiesta è stata presentata con successo.
+success.clipboard=Copiato negli appunti!
 error.max-chars.generic=Numero massimo di caratteri raggiunto.
 error.password-weak=La password deve essere lunga almeno 7 caratteri e contenere caratteri e numeri.
 error.password-no-match=Le password non corrispondono.
@@ -187,6 +188,8 @@ profile.delete-account.success=Successo! Controlla la tua casella di posta e leg
 profile.ui-design=Design UI
 profile.ui-design.rounded=Arrotondato
 profile.ui-design.angular=Angolare
+profile.referrer.info=Raccomanda Alovoa ad un amico! Entrambi otterrete un piccolo ma permanente aumento di visibilità se un nuovo account viene creato con questo link:
+profile.referrer.amount=Numero di rinvii rimasti:
 
 profile.js.delete-image.confirm=Cancellare l'immagine selezionata?
 
@@ -203,6 +206,7 @@ register.asterisk-warning=I campi contrassegnati da un asterisco (*) non possono
 register.login=Hai già un account?
 register.oauth.google=Registrati con Google
 register.oauth.facebook=Registrati con Facebook
+register.referral-code=Codice di riferimento
 
 search.title=Ricerca
 search.max-distance=Distanza massima
