--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -6,6 +6,7 @@
 
 error.generic=오류가 발생했습니다. 다시 시도하십시오.
 success.submit.generic=요청이 성공적으로 제출되었습니다.
+success.clipboard=클립보드에 복사했습니다!
 error.max-chars.generic=최대 문자 수에 도달했습니다.
 error.password-weak=비밀번호는 7 자 이상이어야하며 문자와 숫자를 포함해야합니다.
 error.password-no-match=암호가 일치하지 않습니다.
@@ -184,9 +185,11 @@ profile.audio=커스텀 오디오
 profile.audio.info=방문자를 위해 짧은 오디오를 업로드하십시오. 음향 효과, 음성 또는 좋아하는 노래의 일부 등 무엇이든 업로드 할 수 있습니다!
 profile.audio.delete=오디오를 삭제 하시겠습니까?
 profile.delete-account.success=성공! 우편함을 확인하고 지침을주의 깊게 읽으십시오. 
-profile.ui-design=UI design
-profile.ui-design.rounded=Rounded
-profile.ui-design.angular=Angular
+profile.ui-design=UI 디자인
+profile.ui-design.rounded=반올림 
+profile.ui-design.angular=모난
+profile.referrer.info=친구에게 알로보아를 추천해주세요! 이 링크를 사용하여 새 계정을 만들면 두 사람 모두 작지만 영구적인 가시성을 높일 수 있습니다:
+profile.referrer.amount=남은 추천 수:
 
 profile.js.delete-image.confirm=선택한 사진을 삭제 하시겠습니까?
 
@@ -203,6 +206,7 @@ register.asterisk-warning=별표 (*)가있는 필드는 나중에 변경할 수 
 register.login=이미 계정이 있습니까?
 register.oauth.google=Google에 등록
 register.oauth.facebook=Facebook에 등록
+register.referral-code=추천 코드
 
 search.title=검색
 search.max-distance=최대 거리
