--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -6,6 +6,7 @@
 
 error.generic=Ocorreu um erro. Por favor, tente novamente.
 success.submit.generic=O pedido foi apresentado com sucesso.
+success.clipboard=Copiado para a prancheta!
 error.max-chars.generic=Número máximo de caracteres atingido.
 error.password-weak=A palavra-chave deve ter pelo menos 7 caracteres e conter caracteres e números.
 error.password-no-match=As palavras-passe não coincidem.
@@ -187,6 +188,8 @@ profile.delete-account.success=Sucesso! Por favor, verifique a sua caixa de corr
 profile.ui-design=Desenho UI
 profile.ui-design.rounded=Arredondado
 profile.ui-design.angular=Angular
+profile.referrer.info=Recomende Alovoa a um amigo! Ambos terão um pequeno mas permanente aumento de visibilidade se for criada uma nova conta com este link:
+profile.referrer.amount=Número de referências restantes:
 
 profile.js.delete-image.confirm=Apagar imagem seleccionada?
 
@@ -203,6 +206,7 @@ register.asterisk-warning=Os campos marcados com um asterisco (*) não podem ser
 register.login=Já tem uma conta?
 register.oauth.google=Registe-se no Google
 register.oauth.facebook=Registe-se no Facebook
+register.referral-code=Código de referência
 
 search.title=Pesquisa
 search.max-distance=Distância máxima
