--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -6,6 +6,7 @@
 
 error.generic=Une erreur s'est produite. Veuillez réessayer.
 success.submit.generic=La demande a été soumise avec succès.
+success.clipboard=Copié dans le presse-papiers!
 error.max-chars.generic=Nombre maximum de caractères atteint.
 error.password-weak=Le mot de passe doit comporter au moins 7 caractères et contenir des caractères et des chiffres.
 error.password-no-match=Les mots de passe ne correspondent pas.
@@ -187,6 +188,8 @@ profile.delete-account.success=Succès ! Veuillez vérifier votre boîte aux let
 profile.ui-design=Conception de l'interface utilisateur
 profile.ui-design.rounded=Arrondi
 profile.ui-design.angular=Angulaire
+profile.referrer.info=Recommandez Alovoa à un ami ! Vous recevrez tous deux un petit coup de pouce de visibilité permanent si un nouveau compte est créé avec ce lien:
+profile.referrer.amount=Nombre de renvois restants:
 
 profile.js.delete-image.confirm=Supprimer l'image sélectionnée?
 
@@ -203,6 +206,7 @@ register.asterisk-warning=Les champs marqués d'un astérisque (*) ne peuvent pa
 register.login=Vous avez déjà un compte?
 register.oauth.google=S'inscrire sur Google
 register.oauth.facebook=S'inscrire sur Facebook
+register.referral-code=Code de référence
 
 search.title=Recherchez
 search.max-distance=Distance maximale
